editing the yaml to be correct with the code, adding the API_changes.txt to follow all the changes in the yaml, add the JSON_examle.txt for the PostMan requests, adding the post action in user to create new recipe, add the viewed,isfavorite to each recipe that is in the responed
