# routes/utils/recipes_post_utils.js
@@ -19,9 +19,40 @@ async function generateCustomRecipeId(user_id) {
 }
 
 
+// create a new recipe in the DB
+async function createRecipe(user_id, recipe_details) {
+  const recipe_id = await generateCustomRecipeId(user_id);
+  //insert recipe details into the DB
+    await DButils.execQuery(`
+      INSERT INTO recipes (
+        recipe_id, user_id, title, ready_in_minutes, image, popularity,
+        vegan, vegetarian, gluten_free, instructions, servings,
+        created_by, is_family, family_member, occasion
+      )
+      VALUES (
+        '${recipe_id}', '${user_id}', '${recipe_details.title}', '${recipe_details.readyInMinutes}', '${recipe_details.image}',
+        '${recipe_details.popularity || 0}', '${recipe_details.isvegan}', '${recipe_details.isvegetarian}', '${recipe_details.isglutenFree}',
+        '${JSON.stringify(recipe_details.instructions)}', '${recipe_details.servings}',
+        '${recipe_details.createrBy}', '${recipe_details.isFamily}', '${recipe_details.familyMember}', '${recipe_details.occusion}'
+      );
+    `);
+
+  //insert recipe ingredients into the DB   
+  for (const ingredient of recipe_details.ingredients) {
+      await DButils.execQuery(`
+        INSERT INTO ingredients (recipe_id, name, amount, unit)
+        VALUES (
+          '${recipe_id}', '${ingredient.name}', '${ingredient.amount}', '${ingredient.unit}'
+        );
+      `);
+    }
+  return recipe_id;
+
+}
+
 
 module.exports = {
-  generateCustomRecipeId
+  createRecipe
 };
 
 
